rusty-cdk-macros/tests/fails/string_with_only_alphanumerics_and_hyphens_empty.rs
use rusty_cdk_macros::string_with_only_alphanumerics_and_hyphens;

fn main() {
    string_with_only_alphanumerics_and_hyphens!("");
}
